hphp/hack/test/typecheck/reactive/mutability_rx_local2.php.exp
File "mutability_rx_local2.php", line 13, characters 8-39:
Single argument to \HH\Rx\mutable should be an expression that yields new mutably-owned value, like 'new A()', Hack collection literal or 'f()' where f is function annotated with <<__MutableReturn>> attribute. (Typing[4243])
